# Iterative-Saddle_Point

./: .gitignore  CMakeLists.txt
scripts/: darcy-script.sh  stokes-script.sh
sources/: CMakeLists.txt  ProblemData.cpp  ProblemData.h  TPZHybridCompressibleStokes.cpp  TPZHybridCompressibleStokes.h  TPZHybridStokes.cpp  TPZHybridStokes.h  TPZInterfaceStokes.cpp  TPZInterfaceStokes.h  TPZMixedCompressibleDarcyFlow.cpp  TPZMixedCompressibleDarcyFlow.h  TPZMixedCompressibleStokes.cpp  TPZMixedCompressibleStokes.h  createFile.h  dataFile.h
targets/: CMakeLists.txt  iterative-condensed-darcy.cpp  iterative-condensed-stokes.cpp  iterative-no-condense-darcy.cpp  meshpath_config.h
targets/meshes/: Poiseuille-refined.geo  Poiseuille-refined.msh  Poiseuille.geo  Poiseuille.json  Poiseuille1.msh  Poiseuille10.msh  Poiseuille15.msh  Poiseuille20.msh  Poiseuille25.msh  Poiseuille30.msh  Poiseuille5.msh  log4cxx.cfg
